--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,12 +1,11 @@
 .footer {
   display: flex;
   flex-direction: column;
-  width: 100vw;
-  padding: 0 175px;
-  position: relative;
+  /*position: relative;*/
 
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 14px;
+  margin: 0 auto;
 
   &__container {
     margin-top: 50px;
@@ -67,14 +66,14 @@
     width: 1px;
     background: rgba(26, 90, 76, 0.5);
     position: relative;
+    left: -20px;
   }
 
   &__design {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    margin-bottom: 35px;
+    justify-content: space-evenly;
+    margin-bottom: 15px;
     font-size: 12px;
   }
 
@@ -88,7 +87,7 @@
 .nav__list {
   display: flex;
   justify-content: space-between;
-  width: 300px;
+  width: 400px;
 }
 
 .nav__item {
@@ -101,4 +100,18 @@
 
 .mini-title {
   margin-bottom: 20px;
+}
+
+@media screen and (max-width: 1500px) {
+  .nav__list {
+    width: 300px;
+  }
+
+  .footer__time-works {
+    margin-left: 80px;
+  }
+
+  .footer__info {
+    width: 500px;
+  }
 }
