--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,14 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
+@mixin grid {
+  margin-top: 60px;
+  display: grid;
+  grid-column-gap: 130px;
+  align-items: center;
+}
+
+@media screen and (max-width: 800px) {
+  .current-events {
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
   }
 }
