--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -1,4 +1,10 @@
 .container {
-  max-width: 1250px;
-  width: 100%;
+  max-width: 1900px;
+  margin: auto;
+}
+
+@media screen and (min-width: 1500px) {
+  .container {
+    min-width: 1240px;
+  }
 }
