--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -13,3 +13,13 @@
   color: $generalColor;
   line-height: 150%;
 }
+
+@media screen and (max-width: 350px) {
+  .events {
+    font-size: 16px;
+  }
+
+  .data {
+    font-size: 16px;
+  }
+}
