--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,17 +4,13 @@
 @import "header";
 @import "reset";
 @import "menu";
-@import "part";
-@import "general";
 @import "container";
-@import "button";
 @import "current";
 @import "picture1";
 @import "events";
 @import "outside-title";
 @import "middle-part";
 @import "gallery";
-@import "item";
 @import "scale";
 @import "subscription";
 @import "footer";
@@ -28,16 +24,21 @@ html {
   font-style: normal;
   font-size: 16px;
   line-height: 150%;
+  /* scroll-behavior: smooth;*/
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 body {
-  background: $c-gray;
-  scroll-behavior: smooth;
   color: #0f0e08;
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100%;
 }
 
 .main {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  /*width: 100vw;*/
 }
