--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -1,4 +1,5 @@
 .menu {
+  /*width: 100%;*/
   &__toggle {
     display: none;
   }
@@ -6,15 +7,15 @@
   &__btn {
     display: flex;
     align-items: center;
-    position: fixed;
+    position: absolute;
     top: 45px;
-    left: 58px;
+    margin: 0 10vw;
 
     height: 12px;
     width: 18px;
 
     cursor: pointer;
-    z-index: 1;
+    z-index: 2;
 
     & > span,
     & > span::before,
@@ -42,17 +43,19 @@
 
   &__box {
     display: flex;
-    position: fixed;
-    justify-content: space-between;
-    align-items: baseline;
+    justify-content: center;
+    position: absolute;
+    transition: 0.25s ease-in-out;
+    /* position: fixed;*/
+    /*justify-content: space-between;*/
+    /*align-items: baseline;*/
     visibility: hidden;
     top: 0;
-    left: -100%;
     width: 100%;
     height: 90px;
-
-    margin: 0;
-
+    z-index: 1;
+    left: -100%;
+    /* margin: 0 auto;*/
     list-style: none;
 
     background-color: $mainColor;
@@ -61,25 +64,21 @@
 
   &__logo {
     position: relative;
-    left: 135px;
+    /*left: 135px;*/
     width: 63px;
     height: 72px;
     top: 8px;
   }
 
   &__item {
-    display: flex;
-    justify-content: space-between;
-
     color: $footerTextColor;
     
-    margin-right: 60px;
+    /*margin-right: 60px;*/
     font-family: "Oswald", sans-serif;
     font-size: 14px;
     letter-spacing: 1.2px;
     line-height: 100%;
     text-transform: uppercase;
-    transition-duration: $transitionDuration;
 
     &:hover {
       color: $hoverColor;
@@ -87,20 +86,24 @@
   }
 
   &__list {
+    position: absolute;
+    right: 0;
     display: flex;
+    justify-content: space-between;
     align-items: baseline;
     height: 72px;
+    width: 85%;
   }
 
-  &__search {
-    position: relative;
-    right: 60px;
-  }
 }
 
 .search__img {
   position: relative;
   top: 5px;
+}
+
+.search__window {
+  width: 100px;
 }
 
 .menu__toggle:checked ~ .menu__btn > span {
@@ -120,4 +123,24 @@
 .menu__toggle:checked ~ .menu__box {
   visibility: visible;
   left: 0;
+}
+
+@media screen and (max-width: 900px) {
+  .menu__box {
+    display: block;
+    width: 100%;
+    height: 655px;
+  }
+
+  .menu__list {
+    flex-direction: column;
+    align-items: flex-start;
+    
+  }
+
+  .menu__item {
+    margin-top: 30px;
+    font-size: 18px;
+    line-height: 3;
+  }
 }
