--- a/src/styles/middle-part.scss
+++ b/src/styles/middle-part.scss
@@ -1,12 +1,10 @@
 .middle-part {
-  position: relative;
   height: 675px;
   margin-top: 100px;
-  width: 100vw;
-
-  &__picture {
-    width: 100vw;
-  }
+  background-image: url(../images/middle-picture.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
   
   &__title {
     display: flex;
@@ -24,7 +22,7 @@
 
   &__description {
     position: relative;
-    top: -90px;
+    top: 585px;
     padding: 0 100px;
     left: calc(50% - #{$widtOfAnnouncment} / 2);
     width: $widtOfAnnouncment;
@@ -35,6 +33,53 @@
     justify-content: center;
     background-color: $mainColor;
     cursor: pointer;
-    box-shadow: 2px 0 rgba(26,90,76,0.25);
+    
+    border-bottom: 3px solid #e5e5e5;
+    transition: transform $transitionDuration;
+
+    &:hover {
+      transform: translateY(-20px);
+    }
+  }
+}
+
+@media screen and (max-width: 1500px) {
+  .middle-part {
+    height: 550px;
+
+    &__description {
+      top: 448px;
+    }
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .middle-part {
+    height: 390px;
+
+    &__description {
+      top: 305px;
+    }
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .middle-part {
+    height: 210px;
+    display: flex;
+    justify-content: center;
+
+    &__description {
+      top: 155px;
+      width: 280px;
+    }
+
+    &__name {
+      font-size: 28px;
+    }
+
+    &__title {
+      width: 236px;
+    }
   }
 }
