--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -2,9 +2,7 @@
   background-image: url(../images/footer.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100vw;
   height: 650px;
-
   position: relative;
 
   margin-top: 100px;
@@ -31,28 +29,92 @@
     font-size: 18px;
     line-height: 100%;
     color: $mainColor;
+    text-align: center;
   }
 
-  &-input-container {
-    display: flex;
-    justify-content: space-between;
+  &__button {
     margin-top: 65px;
-    width: 570px;
+
+    &-input {
+      width: 470px;
+      height: 70px;
+      padding-left: 35px;
+    }
+
+    &-submit {
+      width: 70px;
+      height: 70px;
+      margin-left: 30px;
+      background-color: $hoverColor;
+      border: 1px solid $hoverColor;
+      font-weight: bold;
+      transition: all $transitionDuration;
+
+      &:hover {
+        background-color: $generalColor;
+        border-color: $generalColor;
+      }
+    }
   }
+}
 
-  &__input {
-    width: 470px;
-    height: 70px;
-    padding-left: 35px;
+@media screen and (max-width: 1500px) {
+  .subscription {
+    height: 550px;
   }
+}
 
-  &__btn {
-    background-color: $hoverColor;
-    right: 0;
-    transition: $transitionDuration;
+@media screen and (max-width: 800px) {
+  .subscription {
+    height: 380px;
 
-    &:hover {
-      background-color: $generalColor;
+    &__container {
+      margin-top: 65px;
+    }
+
+    &__button {
+
+      &-input {
+        width: 395px;
+
+      }
+
+      &-submit {
+        margin-left: 10px;
+
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .subscription {
+    height: 386px;
+    display: flex;
+    justify-content: center;
+
+    &__container {
+      margin-top: 55px;
+      width: 280px;
+    }
+
+    &__button {
+      position: relative;
+      &-input {
+        width: 233px;
+        height: 50px;
+      }
+      &-submit {
+        position: absolute;
+        right: 0;
+        margin-left: 0;
+        height: 50px;
+        width: 50px;
+      }
+    }
+
+    &__name {
+      font-size: 36px;
     }
   }
 }
