--- a/src/styles/current.scss
+++ b/src/styles/current.scss
@@ -1,8 +1,6 @@
 .current-events {
-  /*margin: 0 auto;*/
+  margin: 0 auto;
   margin-top: 755px;
-  margin-right: 5vw;
-  margin-left: 5vw;
   &__title {
     font-family: "Montserrat", sans-serif;
     font-size: 48px;
@@ -38,7 +36,6 @@
 
   &__picture {
     overflow: hidden;
-    /*max-width: 870px;*/
     transition: width $scaleDuration;
   }
 }
@@ -50,10 +47,56 @@
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
   .current-events {
+    margin-top: 387px;
     display: flex;
     flex-direction: column;
-    justify-content: stretch;
+    width: 100%;
+
+    &__title {
+      display: flex;
+      justify-content: center;
+    }
+
+    &__data {
+      margin-top: 30px;
+    }
+    
+    &__description {
+      display: flex;
+      flex-direction: column;
+      justify-content: start;
+      align-content: flex-start;
+      width: 100%;
+    }
+
+    &__unit1 {
+      display: flex;
+      flex-direction: column;
+    }
+
+    &__unit2 {
+      display: flex;
+      flex-direction: column-reverse;
+    }
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .current-events {
+    margin-top: 470px;
+
+    &__title {
+      font-size: 36px;
+      width: 197px;
+      text-align: center;
+      margin: 0 auto;
+    }
+
+    &__data {
+      width: 100%;
+      padding-right: 10px;
+    }
   }
 }
