--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -72,6 +72,7 @@
     text-transform: uppercase;
     border: 1px solid $generalColor;
     cursor: pointer;
+    background-color: $mainColor;
     transition: background-color $transitionDuration;
 
     padding-left: 43px;
@@ -146,5 +147,67 @@
 
   .header__photo {
     width: 56%;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .header__decor {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .header__title {
+    top: 135px;
+    font-size: 55px;
+    left: calc(-0.65 * 350px);
+  }
+  .header__button {
+    top: 290px;
+    left: calc(-0.65 * 350px);
+  }
+  .header__photo img {
+    height: 385px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .header {
+    &__photo img {
+      height: 300px;
+      width: 100vw;
+    }
+    &__title {
+      position: relative;
+      width: 280px;
+      top: 320px;
+      font-size: 45px;
+      font-weight: bold;
+      text-align: center;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin-left: -100px;
+
+      &--opacity {
+        color: black;
+        -webkit-text-stroke: 0;
+      }
+    }
+    
+    &__button {
+      width: 280px;
+      height: 50px;
+      top: 435px;
+      left: 0;
+      right: 0;
+      padding-left: 90px;
+      margin-left: -100px;
+    }
+
+    &__arrow {
+      height: 50px;
+      width: 50px;
+    }
   }
 }
