--- a/src/styles/picture1.scss
+++ b/src/styles/picture1.scss
@@ -4,3 +4,10 @@
   object-fit: cover;
   transition: transform $scaleDuration;
 }
+
+@media screen and (max-width: 550px) {
+  .picture1 {
+    height: 210px;
+    
+  }
+}
