--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -1,6 +1,9 @@
 .container {
   max-width: 1900px;
   margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 @media screen and (min-width: 1500px) {
