--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -10,7 +10,26 @@
   &__container {
     margin-top: 50px;
     display: flex;
-    justify-content: space-evenly;
+    /*flex-direction: column;*/
+    justify-content: space-between;
+    @media screen and (min-width: 1300px) {
+      &::after {
+        position: absolute;
+        right: 45%;
+        width: 1px;
+        height: 20%;
+        content: "";
+        background-color: rgba(26,90,76,0.5);
+      }
+    }
+  }
+
+  &__content {
+    width: 70%;
+    margin: 0 auto 100px;
+    align-self: center;
+    display: flex;
+    justify-content: space-between;
   }
 
   &__left {
@@ -20,15 +39,15 @@
   &__gallery {
     display: flex;
     flex-direction: column;
-    width: 136px;
+    max-width: 136px;
   }
 
   &__us {
-    width: 62px;
+    max-width: 62px;
   }
   
   &__icon {
-    width: 68px;
+    max-width: 68px;
     height: 160px;
     display: flex;
     flex-direction: column;
@@ -39,17 +58,18 @@
   &__contacts {
     display: flex;
     flex-direction: column;
+    margin-right: 10px;
   }
 
   &__time-works {
     margin-left: 135px;
-    width: 180px;
+    max-width: 180px;
   }
 
   &__info {
-    width: 605px;
     display: flex;
     justify-content: space-between;
+    width: 100%;
   }
 
   &__item {
@@ -60,26 +80,29 @@
   }
 
   &__line {
-    display: flex;
-    content: "";
-    height: 260px;
-    width: 1px;
-    background: rgba(26, 90, 76, 0.5);
-    position: relative;
-    left: -20px;
+    height: 1px;
+    width: 80%;
+    margin-left: 20%;
+    margin-bottom: 50px;
+    margin-top: 45px;
+
+    background: rgba(26,90,76,0.5);
+    @media (min-width: 1300px) {
+      display: none;
+    }
   }
 
   &__design {
     display: flex;
-    flex-direction: row;
+
     justify-content: space-evenly;
     margin-bottom: 15px;
+    margin-top: 15px;
     font-size: 12px;
   }
 
   &__nav {
     position: relative;
-    margin-right: 150px;
     font-size: 16px;
   }
 }
@@ -87,7 +110,7 @@
 .nav__list {
   display: flex;
   justify-content: space-between;
-  width: 400px;
+  max-width: 400px;
 }
 
 .nav__item {
@@ -102,9 +125,9 @@
   margin-bottom: 20px;
 }
 
-@media screen and (max-width: 1500px) {
+@media screen and (max-width: 1600px) {
   .nav__list {
-    width: 300px;
+    max-width: 300px;
   }
 
   .footer__time-works {
@@ -112,6 +135,97 @@
   }
 
   .footer__info {
-    width: 500px;
+    max-width: 500px;
+  }
+}
+
+@media screen and (max-width: 1300px) {
+  .footer__content {
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 0;
+    max-height: 700px;
+  }
+  
+  .nav__list {
+    max-width: 500px;
+    justify-content: space-between;
+
+    &-left {
+      margin-left: 180px;
+    }
+  }
+  .footer__icon {
+    margin-left: 40px;
+  }
+
+  .footer__design {
+    justify-content: space-between;
+    margin-right: 70px;
+    margin-left: 70px;
+  }
+}
+
+@media (max-width: 900px) {
+  .footer__container {
+    justify-content: center;
+  }
+
+  .footer__icon {
+    margin-left: 0;
+  }
+
+  .nav__list {
+    &-left {
+      margin-left: 140px;
+    }
+    &-right {
+      margin-left: 10px;
+    }
+  }
+}
+
+@media (max-width: 550px) {
+  .footer {
+    justify-content: center;
+    height: 930px;
+  }
+
+  .footer__container {
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .footer__icon {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 90%;
+    margin: 0;
+    height: 70px;
+    margin-bottom: 20px;
+  }
+
+  .footer__left {
+    flex-direction: column;
+  }
+
+  .footer__time-works {
+    margin: 0;
+  }
+  .nav__list-left {
+    margin: 0;
+  }
+
+  .footer__design {
+    flex-direction: column;
+    margin: 0 auto;
+    margin-top: 130px;
+
+  }
+
+  .footer__line {
+    margin-left: 1%;
+    width: 100%;
   }
 }
