--- a/src/styles/middle-part.scss
+++ b/src/styles/middle-part.scss
@@ -53,7 +53,7 @@
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
   .middle-part {
     height: 390px;
 
@@ -63,15 +63,17 @@
   }
 }
 
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 550px) {
   .middle-part {
     height: 210px;
-    display: flex;
-    justify-content: center;
-
     &__description {
       top: 155px;
       width: 280px;
+      height: 154px;
+      position: relative;
+      padding: 0 20px;
+      left: calc(50% - 280px / 2);
+      right: 0;
     }
 
     &__name {
