--- a/src/styles/container.scss
+++ b/src/styles/container.scss
@@ -5,8 +5,9 @@
   margin: 0 auto;
   padding-left: $containerSideIndentDesk;
   padding-right: $containerSideIndentDesk;
+  background-color: #3f5252;
 
-  @media (max-width: 690px) {
+  @media (max-width: $breakpointSmall) {
     max-width: 690px;
     padding-left: $containerSideIndentMobile;
     padding-right: $containerSideIndentMobile;
