--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,12 +1,11 @@
 .header {
   height: $headerHeightLarge;
-  background-color: #3f5252;
 
-  @media (max-width: 960px) {
+  @media (max-width: $breakpointMedium) {
     height: 762px;
   }
 
-  @media (max-width: 690px) {
+  @media (max-width: $breakpointSmall) {
     height: 584px;
   }
 
