--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -1,4 +1,5 @@
 .navigation {
+  
   &__list {
     position: absolute;
     top: 216px;
@@ -8,7 +9,7 @@
     list-style: none;
     border-bottom: 1px solid rgba(241, 245, 244, 0.3);
 
-    @media (max-width: 690px) {
+    @media (max-width: $breakpointSmall) {
       top: 140px;
       border-bottom: none;
     }
@@ -25,7 +26,7 @@
 
     @include hover(opacity, 0.6);
 
-    @media (max-width: 690px) {
+    @media (max-width: $breakpointSmall) {
       font-size: 24px;
       margin-bottom: 40px;
     }
