--- a/src/styles/title.scss
+++ b/src/styles/title.scss
@@ -8,7 +8,7 @@
   height: 100%;
   padding: 180px $containerSideIndentDesk 0;
 
-  @media (max-width: 690px) {
+  @media (max-width: $breakpointSmall) {
     padding: 160px $containerSideIndentMobile 0;
   }
 
@@ -16,11 +16,11 @@
     @extend %p;
     color: $colorLight;
 
-    @media (max-width: 960px) {
+    @media (max-width: $breakpointMedium) {
       padding-left: 45px;
     }
 
-    @media (max-width: 690px) {
+    @media (max-width: $breakpointSmall) {
       padding-left: 0;
     }
   }
@@ -42,7 +42,7 @@
       margin-left: $titleSideIndent;
     }
 
-    @media (max-width: 1250px) {
+    @media (max-width: $breakpointLarge) {
       font-size: 72px;
 
       &-item {
@@ -54,20 +54,17 @@
       }
     }
 
-    @media (max-width: 960px) {
+    @media (max-width: $breakpointMedium) {
       padding-left: 45px;
     }
 
-    @media (max-width: 690px) {
+    @media (max-width: $breakpointSmall) {
+      padding-left: 0;
       font-size: 48px;
 
       &-item:last-child {
         margin-left: 0;
       }
-    }
-
-    @media (max-width: 690px) {
-      padding-left: 0;
     }
   }
 
@@ -77,16 +74,13 @@
     @extend %p;
     color: $colorLight;
 
-    @media (max-width: 960px) {
+    @media (max-width: $breakpointMedium) {
       width: 267px;
       margin-left: 45px;
     }
 
-    @media (max-width: 690px) {
+    @media (max-width: $breakpointSmall) {
       margin-top: 30px;
-    }
-
-    @media (max-width: 690px) {
       margin-left: 0;
     }
   }
@@ -98,12 +92,12 @@
     @extend %red-button;
     z-index: 4;
 
-    @media (max-width: 960px) {
+    @media (max-width: $breakpointMedium) {
       top: 80px;
       left: 45px;
     }
 
-    @media (max-width: 690px) {
+    @media (max-width: $breakpointSmall) {
       top: 50px;
       left: 0;
     }
@@ -118,7 +112,7 @@
     line-height: 125%;
     color: $colorLight;
 
-    @media (max-width: 960px) {
+    @media (max-width: $breakpointMedium) {
       display: none;
     }
   }
@@ -135,7 +129,7 @@
     background-color: $colorLight;
     z-index: 0;
 
-    @media (max-width: 960px) {
+    @media (max-width: $breakpointMedium) {
       display: none;
     }
   }
@@ -154,18 +148,18 @@
 
     transition: background-size 0.3s, background-position-x 0.3s;
 
-    @media (max-width: 1024px) {
+    @media (max-width: $breakpointTabletLarge) {
       background-size: 80%;
       background-position-x: 130px;
     }
 
-    @media (max-width: 960px) {
+    @media (max-width: $breakpointMedium) {
       background-size: 60%;
       background-position-x: 250px;
       background-position-y: 310px;
     }
 
-    @media (max-width: 690px) {
+    @media (max-width: $breakpointSmall) {
       width: 160px;
       height: 290px;
       background-size: cover;
@@ -182,7 +176,7 @@
     @extend %p;
     color: $colorLight;
 
-    @media (max-width: 1250px) {
+    @media (max-width: $breakpointLarge) {
       display: none;
     }
   }
