--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -30,3 +30,16 @@
   width: $burgerMenuWidth;
   height: $burgerNenuHeight;
 }
+
+%placeholder {
+  font-family: "Raleway", sans-serif;
+  font-size: 16px;
+  line-height: 100%;
+  color: $colorLight;
+}
+
+%newscolumn {
+  flex-direction: column;
+  justify-content: start;
+  align-items: flex-start;
+}
