--- a/src/styles/utils/_resets.scss
+++ b/src/styles/utils/_resets.scss
@@ -13,12 +13,22 @@ textarea {
   padding: 0;
 }
 
+a {
+  color: inherit;
+}
+
 a,
 a:visited {
   text-decoration: none;
 }
 
+ul {
+  list-style: none;
+}
+
+input,
 input:focus,
 textarea:focus {
   outline: none;
+  border: none;
 }
