--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,13 @@
 @import "selection";
 @import "title";
 @import "button";
+@import "section";
+@import "exhibition";
+@import "event";
+@import "visit";
+@import "news";
+@import "subscribe";
+@import "footer";
 
 * {
   box-sizing: border-box;
