--- a/src/styles/selection.scss
+++ b/src/styles/selection.scss
@@ -1,21 +1,17 @@
 .selection {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   position: absolute;
   top: $containerTopIndent + 8px;
   right: $containerSideIndentDesk + 17px;
-  width: 31px;
+  width: 36px;
+
+  background-image: url(../images/3.svg);
+  background-repeat: no-repeat;
+  background-position: center right;
+
+  @extend %p;
+  color: $colorLight;
   z-index: 5;
-
-  &__languages {
-    display: block;
-  }
-
-  &__item {
-    display: none;
-  }
-
-  &__label {
-    @extend %p;
-    color: $colorLight;
-    cursor: pointer;
-  }
 }
