--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -9,8 +9,11 @@ $colorIcon: #c4c4c4;
 $containerMaxWidth: 1280px;
 $containerTopIndent: 20px;
 $containerSideIndentDesk: 55px;
-$containerSideIndentTablet: 40px;
+$containerSideIndentTablet: 100px;
 $containerSideIndentMobile: 20px;
+
+$sideIndentLarge: 255px;
+$durationIndent: -100px;
 
 $titleSideIndent: 100px;
 
@@ -22,3 +25,13 @@ $burgerNenuHeight: 20px;
 
 $headerHeightLarge: 800px;
 $headerHeightSmall: 584px;
+
+$breakpointLarge: 1250px;
+$breakpointTabletLarge: 1024px;
+$breakpointMedium: 960px;
+$breakpointTabletSmall: 768px;
+$breakpointSmall: 690px;
+$breakpointMinimal: 320px;
+
+$newsItemSizeLarge: 370px;
+$newsItemSizeSmall: 270px;
