--- a/src/styles/layout/exhibitions.scss
+++ b/src/styles/layout/exhibitions.scss
@@ -62,6 +62,11 @@
 
   &__img {
     position: absolute;
+    transition: transform 0.7s ease;
+
+    &:hover {
+      transform: scale(1.1);
+    }
 
     @media (min-width: 2000px) {
       width: 700px;
