--- a/src/styles/layout/news.scss
+++ b/src/styles/layout/news.scss
@@ -3,7 +3,7 @@
 
   &__container {
     padding-top: 120px;
-    padding-bottom: 295px;
+    padding-bottom: 250px;
     position: relative;
 
     @media (max-width: $mobileXLsize) {
@@ -25,25 +25,13 @@
     grid-template-columns: repeat(3, 370px);
     grid-column-gap: 30px;
 
-    @media (max-width: 1250px) {
-      grid-template-columns: repeat(3, 270px);
-      justify-content: center;
-    }
-
-    @media (max-width: $notebookSize) {
-      grid-template-columns: repeat(2, 270px);
-    }
-
-    @media (max-width: $mediumSize) {
-      grid-template-columns: 270px;
-    }
-
     @media (max-width: $mobileXLsize) {
       margin-top: 60px;
     }
   }
 
   &__card {
+    outline: none;
 
     @media (max-width: $notebookSize) {
       &:last-of-type {
@@ -60,10 +48,12 @@
 
   &__img {
     max-width: 100%;
+    margin: 0 auto;
   }
 
   &__info {
-    margin-top: 30px;
+    margin: 30px auto;
+    max-width: 370px;
   }
 
   &__date {
