--- a/src/styles/current.scss
+++ b/src/styles/current.scss
@@ -1,5 +1,5 @@
 .current-events {
-  margin: 0 auto;
+  //margin: 0 auto;
   margin-top: 755px;
   &__title {
     font-family: "Montserrat", sans-serif;
