--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,7 +1,6 @@
 .footer {
   display: flex;
   flex-direction: column;
-  /*position: relative;*/
 
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 14px;
@@ -10,7 +9,6 @@
   &__container {
     margin-top: 50px;
     display: flex;
-    /*flex-direction: column;*/
     justify-content: space-between;
     @media screen and (min-width: 1300px) {
       &::after {
@@ -111,6 +109,7 @@
   display: flex;
   justify-content: space-between;
   max-width: 400px;
+  width: 400%;
 }
 
 .nav__item {
@@ -126,10 +125,6 @@
 }
 
 @media screen and (max-width: 1600px) {
-  .nav__list {
-    max-width: 300px;
-  }
-
   .footer__time-works {
     margin-left: 80px;
   }
@@ -142,13 +137,12 @@
 @media screen and (max-width: 1300px) {
   .footer__content {
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin: 0;
     max-height: 700px;
   }
   
   .nav__list {
-    max-width: 500px;
     justify-content: space-between;
 
     &-left {
@@ -164,9 +158,21 @@
     margin-right: 70px;
     margin-left: 70px;
   }
+
+  .footer {
+    justify-content: center;
+  }
+
+  .footer__container {
+    justify-content: center;
+  }
 }
 
 @media (max-width: 900px) {
+  .footer {
+    justify-content: center;
+  }
+
   .footer__container {
     justify-content: center;
   }
