--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,7 +25,7 @@ html {
   font-style: normal;
   font-size: 16px;
   line-height: 150%;
-  /* scroll-behavior: smooth;*/
+  scroll-behavior: smooth;
   width: 100%;
   max-width: 100%;
   overflow-x: hidden;
