created two section

--- a/src/styles/_title.scss
+++ b/src/styles/_title.scss
@@ -1,19 +1,24 @@
 .title {
-  height: 655px;
   position: relative;
-  padding-left: 5%;
+  height: 655px;
+  padding-left: $general-padding;
+  margin-bottom: 100px;
 
   &__img {
     position: absolute;
     left: 555px;
     z-index: -1;
 
+    height: 100%;
+    width: 100%;
+    float: right;
+
     object-fit: cover;
     object-position: bottom;
 
-    height: 655px;
-    width: 100%;
-    float: right;
+    &-size {
+      height: 655px;
+    }
   }
 
   &__heading {
@@ -24,7 +29,6 @@
 
     font-weight: bold;
     font-size: 72px;
-    line-height: 100%;
     text-transform: uppercase;
 
     &--opacity {
@@ -38,9 +42,6 @@
     top: 15px;
     left: 50%;
 
-    width: 68px;
-    height: 72px;
-
     background: center / cover no-repeat url(../images/NA_MU.png);
   }
 
@@ -48,20 +49,38 @@
     position: absolute;
     top: 467px;
     left: 255px;
+
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 35px;
     width: 220px;
     height: $btn-size;
+    padding-left: 35px;
+    justify-content: space-between;
+    align-items: center;
+
+    font-family: $IBM;
+    font-weight: 500;
+    font-size: 16px;
     text-transform: uppercase;
+
     background-color: $color-white;
     border: 2px solid $color-green;
   }
 
   &__mark {
     position: absolute;
-    bottom: 5%;
+    bottom: 120px;
     transform: rotate(-90deg);
+
+    &::before {
+      position: relative;
+      right: 100px;
+      top: 10px;
+
+      display: block;
+      width: 70px;
+      height: 1px;
+      background-color: $color-green;
+      content: "";
+    }
   }
 }
