--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,9 +1,6 @@
 .menu {
-
   $blockName: &;
-
   &__container {
-    // position: fixed;
     top: 0;
     left: 0;
     right: 0;
@@ -53,6 +50,7 @@
 
   &__logo--small {
     position: absolute;
+    top:9px;
     left: calc(50% - #{$logoWidth} / 2);
   }
 
