--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,24 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "reset.scss";
+@import "ex-card.scss";
+@import "exhibitions.scss";
+@import "visit_us.scss";
+@import "news-card.scss";
+@import "news.scss";
+@import "daigest.scss";
+@import "fcard.scss";
+@import "future.scss";
+@import "footer.scss";
+
+html * {
+  font-family: "Playfair Display", sans-serif;
+  font-size: 16px;
+
+  scroll-behavior: smooth;
+}
 
 body {
-  background: $c-gray;
+  background: #f1f5f4;
 }
