git add gallery, events, footer,lecture, fix title

--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -7,5 +7,22 @@ html {
 }
 
 body {
+  overflow-x: hidden;
+}
+
+body,
+div,
+p,
+span,
+h1,
+h2,
+h3,
+h4,
+ul,
+li,
+a,
+section,
+button {
   margin: 0;
+  padding: 0;
 }
