--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,17 @@
-@import "utils";
-@import "typography";
 @import "_vars";
 @import "_reset";
 //header
+@import "_nav";
 @import "_title";
 @import "_logo";
+@import "_ticket";
 @import "_button";
 @import "_mark";
+@import "_heading-section";
+@import "_heading-info";
 @import "_events";
+@import "_date";
+@import "_lecture";
+@import "_gallery";
+@import "_subscription";
+@import "_footer";
