--- a/src/styles/_events.scss
+++ b/src/styles/_events.scss
@@ -1,15 +1,10 @@
 .events {
   padding: 0 $general-padding;
 
-  &__title {
-    margin-bottom: 60px;
-    font-weight: bold;
-    font-size: 48px;
-  }
-
   &__element {
     display: flex;
     margin: 60px 0;
+    align-items: center;
 
     &:last-child {
       justify-content: flex-end;
@@ -18,7 +13,22 @@
 
   &__img {
     height: 520px;
+    max-width: 670px;
     border-radius: 5px;
+    object-fit: cover;
+
+    
+    &:first-child {
+      margin-right: 60px;
+    }
+
+    &:last-child {
+      margin-left: 60px;
+    }
+
+    &--hidden {
+      display: none;
+    }
   }
 
   &__info {
@@ -26,24 +36,27 @@
   }
 
   &__mark {
-    font-family: $IBM;
-    font-weight: 500;
-    font-size: 14px;
-    text-transform: uppercase;
-    opacity: 0.7;
+    display: inline;
+    margin-right: 26px;
   }
 
   &__date {
-    font-family: $IBM;
-    font-weight: bold;
-    font-size: 14px;
-    color: $color-green;
+    display: inline;
   }
 
   &__heading {
-    font-family: $Montserrat;
-    font-size: 36px;
-    font-weight: normal;
+    margin-top: 10px;
+    &::after {
+      position: relative;
+      left: 100%;
+      bottom: 27px;
+
+      display: block;
+      width: 15px;
+      height: 15px;
+      content: "";
+      background-color: $color-orange;
+    }
   }
 
   &__text {
@@ -54,4 +67,75 @@
     opacity: 0.7;
   }
 
+  @media (min-width: 1700px) {
+    padding: 0 10%;
+
+    &__img {
+      display: none;
+
+      &--hidden {
+        display: block;
+        border-radius: 5px;
+
+        &:nth-child(2) {
+          margin-right: 60px;
+        }
+    
+        &:last-child {
+          margin-left: 60px;
+        }
+      }
+    }
+  }
+
+  @media (max-width:1155px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &__element {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      margin: 20px 0;
+    }
+
+    &__img {
+      &:first-child {
+        order: 0;
+        margin-right: 0;
+        margin-bottom: 30px;
+      }
+  
+      &:last-child {
+        order: 2;
+        margin-left: 0;
+      }
+    }
+
+    &__info {
+      &:first-child {
+        order: 1;
+        margin-right: 0;
+        margin-top: 30px;
+      }
+  
+      &:last-child {
+        order: 3;
+        margin-left: 0;
+      }
+    }
+  }
+
+  @media (max-width: 900px) {
+    &__title {
+      margin-top: 150px;
+    }
+  }
+
+  @media (max-width: 700px) {
+    &__img {
+      height: 320px;
+      max-width: 470px;
+    }
+  }
 }
