--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -61,6 +61,7 @@
   }
 
   &__nav {
+    display: flex;
     margin-left: 10%;
 
     font-family: $IBM;
@@ -71,6 +72,16 @@
     & :first-child {
       margin-right: 30px;
     }
+  }
+
+  &__item {
+    list-style-type: none;
+    margin-bottom: 20px;
+  }
+
+  &__link {
+    color: $color-black;
+    text-decoration: none;
   }
 
   @media (min-width: 1700px) {
