--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,13 +1,34 @@
 .nav {
-  display: flex;
+  &__list {
+    display: flex;
+    justify-content: center;
+  }
 
   &__item {
+    padding: 0 25px;
     list-style-type: none;
-    margin-bottom: 20px;
+    transition: color 1s, transform 1s;
+
+    &:hover {
+      color: $color-green;
+      border-radius: 40px;
+      transform: scale(1.2);
+    }
   }
 
   &__link {
+    white-space: nowrap;
+    font-family: $IBM;
+    font-size: 18px;
+    line-height: 50px;
+    font-weight: 500;
     color: $color-black;
     text-decoration: none;
+  }
+
+  @media (max-width: 1200px) {
+    &__item {
+      padding: 0 15px;
+    }
   }
 }
