--- a/src/styles/_subscription.scss
+++ b/src/styles/_subscription.scss
@@ -35,4 +35,15 @@
     }
   }
 
+  @media (max-width: 700px) {
+    &__button {
+      width: 50px;
+      height: 50px;
+    }
+    
+    &__input {
+      width: 370px;
+      height: 50px;
+    }
+  }
 }
