--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,10 @@
 @import "utils";
-@import "fonts";
-@import "typography";
+@import "reset";
+@import "global";
+@import "header";
+@import "logo";
+@import "burger-menu";
+@import "button";
+@import "event";
+@import "heading";
 
-body {
-  background: $c-gray;
-}
