--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
 $c-gray: #eee;
+$line-height: 2px;
+$logo-width: 68px;
+$logo-height: 72px;
+$width-event-content: 1170px;
+$color-item: #687480;
+$color-date:#1A5A4C;
