--- a/src/styles/_events.scss
+++ b/src/styles/_events.scss
@@ -1,6 +1,12 @@
 .events {
   padding: 0 $general-padding;
 
+  &__title {
+    margin-bottom: 60px;
+    font-weight: bold;
+    font-size: 48px;
+  }
+
   &__element {
     display: flex;
     margin: 60px 0;
@@ -45,13 +51,12 @@
   }
 
   &__heading {
+    font-size: 36px;
     margin-top: 10px;
-    &::after {
-      position: relative;
-      left: 100%;
-      bottom: 27px;
 
-      display: block;
+    &::after {
+      display: inline-block;
+      margin: 0 0 3px 20px;
       width: 15px;
       height: 15px;
       content: "";
@@ -133,9 +138,25 @@
   }
 
   @media (max-width: 700px) {
+    &__title {
+      font-size: 30px;
+      margin-bottom: 10px;
+    }
+
     &__img {
       height: 320px;
       max-width: 470px;
+    }
+  }
+
+  @media (max-width: 480px) {
+    &__img {
+      height: 200px;
+      max-width: 470px;
+    }
+
+    &__heading {
+      font-size: 24px;
     }
   }
 }
