--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -1,5 +1,11 @@
 .gallery {
-  margin: 0 $general-padding;
+  padding: 0 $general-padding;
+
+  &__title {
+    margin-bottom: 60px;
+    font-weight: bold;
+    font-size: 48px;
+  }
 
   &__picture {
     &-top {
@@ -46,7 +52,6 @@
   @media (min-width: 1550px) {
     display: flex;
     flex-direction: column;
-    align-items: center;
 
     &__img--hidden {
       display: block;
@@ -63,7 +68,6 @@
   @media (max-width: 900px) {
     display: flex;
     flex-direction: column;
-    align-items: center;
 
     &__picture {
       &-top {
