--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -11,19 +11,19 @@
   &__item {
     padding: 0 25px;
     list-style-type: none;
-    transition: color 1s, transform 1s;
+    transition: transform 1s;
 
     &:hover {
-      transform: scale(1.2);
+      transform: scale(1.1);
     }
   }
 
   &__link {
     white-space: nowrap;
-
-    font-size: 18px;
+    font-family: $IBM;
+    font-size: 20px;
     line-height: 50px;
-    font-weight: 500;
+    font-weight: 550;
     text-decoration: none;
 
     color: $color-green;
@@ -56,15 +56,24 @@
     display: none;
   }
 
-  @media (max-width: 1200px) {
+  @media (max-width: 1250px) {
     &__item {
       padding: 0 15px;
     }
+
+    &__link {
+      font-size: 18px;
+    }
   }
 
-  @media (max-width: 1015px) {
+  @media (max-width: 1030px) {
+    &__item {
+      transition: box-shadow 0.5s;
+    }
+
     &__item:hover {
       transform: scale(1);
+      box-shadow: 0 1px 10px $color-green;
     }
 
     .nav__toggler-label {
