--- a/src/styles/_title.scss
+++ b/src/styles/_title.scss
@@ -9,7 +9,7 @@
     float: right;
 
     object-fit: cover;
-    object-position: bottom;
+    object-position: left;
 
     &-mid {
       display: none;
@@ -66,6 +66,7 @@
   &__mark {
     position: absolute;
     bottom: 120px;
+    color: $color-green;
     transform: rotate(-90deg);
 
     &::before {
@@ -81,6 +82,34 @@
     }
   }
 
+  @media (min-width: 1700px) {
+    &__heading {
+      left: 376px;
+    }
+
+    &__ticket {
+      left: 376px;
+    }
+
+    &__img {
+      width: calc(100% - 682px);
+    }
+  }
+
+  @media (max-width: 900px) {
+    height: 455px;
+  }
+
+  @media (max-width: 1700px) {
+    &__img {
+      width: calc(100% - 560px);
+    }
+  }
+
+  @media (max-width: 1030px) {
+    top: -50px;
+  }
+
   @media (max-width: 900px) {
     &__img {
       display: none;
@@ -93,6 +122,7 @@
 
     &__mark {
       display: none;
+      color: green;
     }
 
     &__heading {
@@ -116,16 +146,6 @@
         display: flex;
         align-items: center;
       }
-    }
-  }
-
-  @media (max-width: 900px) {
-    height: 455px;
-  }
-
-  @media (max-width: 5500px) {
-    &__img {
-      width: calc(100% - 560px);
     }
   }
 }
