--- a/src/styles/_subscription.scss
+++ b/src/styles/_subscription.scss
@@ -36,6 +36,10 @@
   }
 
   @media (max-width: 700px) {
+    &__heading {
+      font-size: 38px;
+    }
+
     &__button {
       width: 50px;
       height: 50px;
