add new small media and id for section

--- a/src/styles/_gallery.scss
+++ b/src/styles/_gallery.scss
@@ -10,28 +10,39 @@
   &__picture {
     &-top {
       display: flex;
-      justify-content: center;
       margin-bottom: 40px;
 
       & :first-child {
+        flex: 1;
         margin-right: 30px;
       }
 
+      & :nth-child(2) {
+        flex: 2;
+      }
+
       & :last-child {
+        flex: 1;
         margin-left: 30px;
       }
     }
 
     &-bottom {
       display: flex;
-      justify-content: center;
+
       margin-bottom: 40px;
 
       & :first-child {
+        flex: 2;
         margin-right: 30px;
       }
 
+      & :nth-child(2) {
+        flex: 1;
+      }
+
       & :last-child {
+        flex: 1;
         margin-left: 30px;
       }
     }
@@ -39,6 +50,8 @@
 
   &__img {
     border-radius: 5px;
+    object-fit: cover;
+    object-position: top;
 
     &--hidden {
       display: none;
@@ -49,7 +62,7 @@
     margin-bottom: 100px;
   }
 
-  @media (min-width: 1550px) {
+  @media (min-width: 1680px) {
     display: flex;
     flex-direction: column;
 
@@ -58,14 +71,13 @@
     }
   }
 
-  @media (max-width: 1200px) {
+  @media (max-width: 1300px) {
     &__img {
       width: 470px;
-      object-fit: cover;
     }
   }
 
-  @media (max-width: 900px) {
+  @media (max-width: 950px) {
     display: flex;
     flex-direction: column;
 
@@ -97,6 +109,12 @@
           margin-left: 0;
         }
       }
+    }
+  }
+
+  @media (max-width: 500px) {
+    &__img {
+      width: 350px;
     }
   }
 }
