--- a/src/styles/_lecture.scss
+++ b/src/styles/_lecture.scss
@@ -24,6 +24,7 @@
     display: inline;
     margin-right: 146px;
   }
+
   &__date {
     display: inline;
   }
@@ -40,6 +41,23 @@
 
     &__heading {
       font-size: 24px;
+    }
+  }
+
+  @media (max-width: 450px) {
+    &__anons {
+      width: 300px;
+      padding: 50px;
+      text-align: center;
+    }
+
+    &__heading {
+      font-size: 18px;
+      margin-top: 16px;
+    }
+
+    &__mark {
+      margin-right: 0;
     }
   }
 }
