--- a/src/styles/_subscription.scss
+++ b/src/styles/_subscription.scss
@@ -50,4 +50,16 @@
       height: 50px;
     }
   }
+
+  @media (max-width: 450px) {
+    height: 300px;
+    
+    &__input {
+      width: 270px;
+    }
+
+    &__info {
+      text-align: center;
+    }
+  }
 }
