--- a/src/styles/_title.scss
+++ b/src/styles/_title.scss
@@ -4,7 +4,6 @@
   margin-bottom: 100px;
 
   &__img {
-    width: auto;
     height: 655px;
     float: right;
 
@@ -66,6 +65,7 @@
   &__mark {
     position: absolute;
     bottom: 120px;
+    left: 40px;
     color: $color-green;
     transform: rotate(-90deg);
 
@@ -96,13 +96,23 @@
     }
   }
 
-  @media (max-width: 900px) {
-    height: 455px;
-  }
-
   @media (max-width: 1700px) {
     &__img {
       width: calc(100% - 560px);
+    }
+  }
+
+  @media (max-width: 1200px) {
+    &__heading {
+      left: 100px;
+    }
+
+    &__ticket {
+      left: 100px;
+    }
+
+    &__img {
+      width: calc(100% - 405px);
     }
   }
 
@@ -111,12 +121,12 @@
   }
 
   @media (max-width: 900px) {
+    height: 455px;
     &__img {
       display: none;
 
       &-mid {
         display: block;
-        max-width: 900px;
       }
     }
 
@@ -147,5 +157,9 @@
         align-items: center;
       }
     }
+  }
+
+  @media (max-width: 480px) {
+    height: 355px;
   }
 }
