--- a/src/styles/_events.scss
+++ b/src/styles/_events.scss
@@ -51,8 +51,9 @@
   }
 
   &__heading {
+    white-space: nowrap;
     font-size: 36px;
-    margin-top: 10px;
+    margin: 10px 0;
 
     &::after {
       display: inline-block;
@@ -97,6 +98,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
     &__element {
       display: flex;
       justify-content: center;
@@ -157,6 +159,10 @@
 
     &__heading {
       font-size: 24px;
+    }
+
+    &__info {
+      width: 320px;
     }
   }
 }
